--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14",
     "react-redux": "^5.0.6",
+    "react-scripts": "1.0.14",
     "redux": "^3.7.2"
   },
   "scripts": {
@@ -14,5 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "deep-freeze": "^0.0.1"
   }
 }
