--- a/package.json
+++ b/package.json
@@ -11,11 +11,22 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "lint": "eslint src test",
+    "lintFix": "eslint --fix src test",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "deep-freeze": "^0.0.1"
+    "babel-eslint": "^7.2.3",
+    "deep-freeze": "^0.0.1",
+    "eslint": "^4.11.0",
+    "eslint-config-react-app": "^2.0.1",
+    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.4.0",
+    "prettier": "^1.8.2"
   }
 }
