--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lintFix": "eslint --fix src test",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "publish": "timestamp=$(date \"+%d.%m.%y::%H:%M\") && gh-pages -d build -m 'Site Published on '$timestamp"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -27,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.4.0",
+    "gh-pages": "^1.0.0",
     "prettier": "^1.8.2"
   }
 }
