--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "p2p-filters",
   "version": "0.1.0",
+  "homepage": "/cards",
   "private": true,
   "dependencies": {
     "react": "^16.0.0",
