--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "/cats",
   "private": true,
   "dependencies": {
+    "peerjs": "^0.3.14",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
